<resources xmlns:tools="http://schemas.android.com/tools">
	<string name="languageCode">en</string>
	<string name="language">English</string>
	<string name="translated_by">Translated by Kimjisub</string>
	<string name="app_name">UniPad</string>
	<string name="app_name_test">UniPad Test</string>
	<string name="accept">Accept</string>
	<string name="cancel">Cancel</string>
	<string name="warning">Warning</string>
	<string name="error">ERROR</string>
	<string name="errOccur">An error has occurred.</string>
	<string name="wait_a_sec">Just wait a moment…</string>
	<string name="importing">Importing</string>
	<string name="loading">Loading</string>
	<string name="loading_phase_info">Reading info…</string>
	<string name="loading_phase_keysound">Loading sounds…</string>
	<string name="loading_phase_keyled">Loading LEDs…</string>
	<string name="loading_phase_autoplay">Loading autoplay…</string>
	<string name="loading_phase_audio">Loading audio…</string>
	<string name="download">Download</string>
	<string name="downloadWaiting">Download Waiting</string>
	<string name="downloading">Downloading</string>
	<string name="downloaded">Downloaded</string>
	<string name="success">Success</string>
	<string name="failed">Failed</string>
	<string name="delete">Delete</string>
	<string name="edit">Edit</string>
	<string name="update">Update</string>
	<string name="ignore">Ignore</string>
	<string name="apply">Apply</string>
	<string name="restart">Restart</string>
	<string name="using">Using</string>
	<string name="path">Path</string>
	<string name="quit">Quit</string>
	<string name="menu">Menu</string>
	<string name="website">Website</string>
	<string name="measuring">Measuring…</string>
	<string name="general">General</string>
	<string name="notice">Notice</string>
	<string name="newUniPack">New UniPack</string>
	<string name="exceptionOccurred">Exception Occurred</string>
	<string name="reconnect_launchpad">Reconnect Launchpad</string>
	<string name="import_unipack">Import UniPack</string>
	<string name="store">Store</string>
	<string name="setting">Setting</string>
	<string name="information">Information</string>
	<string name="select_theme">Select Theme</string>
	<string name="storage_location">Storage Location</string>
	<string name="github">Github</string>
	<string name="openSourceLicense">Open Source License</string>
	<string name="FCMToken">FCM Token</string>
	<string name="tap_to_copy">Tap to copy</string>
	<string name="copyright">ⓒ 2016–2026. UniPad. All rights reserved.</string>
	<string name="community">Community</string>
	<string name="officialHomepage">Official Website</string>
	<string name="officialHomepage_">UniPad Official Website</string>
	<string name="officialFacebook">Official Facebook</string>
	<string name="officialFacebook_">Technical Support</string>
	<string name="facebookCommunity">Facebook Community</string>
	<string name="facebookCommunity_">english</string>
	<string name="naverCafe">Naver Cafe</string>
	<string name="naverCafe_">korean</string>
	<string name="discord">Discord</string>
	<string name="discord_">Discord</string>
	<string name="kakaotalk">KakaoTalk to Dev. kimjisub</string>
	<string name="kakaotalk_">Other than Technical Support</string>
	<string name="email">0226unipad@gmail.com</string>
	<string name="email_">Other than Technical Support</string>
	<string name="title">Title</string>
	<string name="producerName">Producer</string>
	<string name="padSize">Pad Size</string>
	<string name="numChain">Chains</string>
	<string name="fileSize">File Size</string>
	<string name="led">Led</string>
	<string name="autoPlay">Autoplay</string>
	<string name="practiceMode">Practice</string>
	<string name="guidePlay">Guide</string>
	<string name="stepPractice">Step</string>
	<string name="option_indicator_format">%s ●</string>
	<string name="feedbackLight">Feedback light</string>
	<string name="traceLog">Trace Log</string>
	<string name="traceLogClear">Trace Log has been reset.</string>
	<string name="record">Record</string>
	<string name="hideUI">Hide UI</string>
	<string name="watermark">Watermark</string>
	<string name="proLightMode">Pro Light Mode</string>
	<string name="newVersionFound">New version detected.</string>
	<string name="update_available">Update available</string>
	<string name="permissionRequire">External storage access is required for saving project files.\nObtain permission for this privilege.</string>
	<string name="permissionDenied">Apps require access to external storage.\nPlease Turn on permissions in [Settings] > [Permissions]</string>
	<string name="unipackNotFound">UniPack not found.</string>
	<string name="clickToAddUniPack">Click to add UniPacks.</string>
	<string name="guide_download_new">Download new packs</string>
	<string name="guide_import_external">Import downloaded packs</string>
	<string name="guide_restore_packs">Recover missing packs</string>
	<string name="guide_empty_title">Play your first UniPack</string>
	<string name="guide_empty_step_get">Get a pack: tap %1$s to use the Store, or %2$s for a .zip you already have.</string>
	<string name="guide_empty_step_play">Tap the pack in the list, then tap %1$s.</string>
	<string name="guide_empty_step_pads">No Launchpad? Just tap the pads on screen.</string>
	<string name="guide_empty_link">Getting started guide</string>
	<string name="unipack_play">Play</string>
	<string name="doYouWantToDeleteUniPack">Do you want to delete this project?</string>
	<string name="remapDone">AutoPlay remapping has been completed successfully.</string>
	<string name="remapFail">AutoPlay does not exist</string>
	<string name="importComplete">Pack imported!</string>
	<string name="importPlayNow">Play now</string>
	<string name="importFailed">Import failed</string>
	<string name="copied">Copied to clipboard.</string>
	<string name="no_app_for_link">No app on this device can open this link.</string>
	<string name="skinMemoryErr">Failed to apply skin.\nRestart app.</string>
	<string name="skinErr">Failed to apply skin.\nReset skin.</string>
	<string name="outOfMemory">Out of memory..\nFree some memory and retry.</string>
	<string name="outOfCPU">Couldn\'t start pack\nbecause of phone specifications…\nTry again.</string>
	<string name="launchpadConnecting">Connecting launchpad…</string>
	<string name="midiDevicesNotDetected">MIDI Devices Not Detected</string>
	<string name="midi_open_panel">Open</string>
	<string name="midi_connected_banner">MIDI connected: %1$s</string>
	<string name="midi_disconnected">Disconnected</string>
	<string name="signal_SpeedFirst">Speed first</string>
	<string name="signal_avoidAfterimage">Avoid afterimage</string>
	<string name="midi_lp_s" translatable="false">Launchpad S</string>
	<string name="midi_lp_mk2" translatable="false">Launchpad MK2</string>
	<string name="midi_lp_pro" translatable="false">Launchpad PRO</string>
	<string name="midi_lp_x" translatable="false">Launchpad X</string>
	<string name="midi_lp_mini_mk3" translatable="false">Launchpad Mini MK3</string>
	<string name="midi_lp_mk3" translatable="false">Launchpad Pro MK3</string>
	<string name="midi_lp_pro_cfw" translatable="false">Launchpad Pro MK2 (CFW)</string>
	<string name="midi_matrix" translatable="false">Matrix</string>
	<string name="midi_midi_fighter" translatable="false">Midi Fighter</string>
	<string name="midi_master_keyboard" translatable="false">Master Keyboard</string>
	<string name="canNotQuitWhileDownloading">Can\'t quit while downloading the pack</string>
	<string name="UnableToAccessServer">Unable to access server.</string>
	<string name="theme">Theme</string>
	<string name="themeDownload">Download Themes</string>
	<string name="requireRestart">Requires app restart.</string>
	<string name="doYouWantToRestartApp">Do you want to restart the app?</string>
	<string name="theme_import">Import Theme</string>
	<string name="theme_import_success">Theme imported successfully.</string>
	<string name="theme_import_failed">Failed to import theme.</string>
	<string name="theme_import_invalid">Invalid theme file.</string>
	<string name="theme_add_title">Add Theme</string>
	<string name="theme_add_zip_desc">Import a .zip theme file from your device.</string>
	<string name="theme_add_zip">Import ZIP file</string>
	<string name="theme_add_create">Create your own theme</string>
	<string name="theme_add_create_desc">Learn how to create a custom theme.</string>
	<string name="theme_apk_deprecated">APK-based themes are no longer supported. Please use ZIP themes instead.</string>
	<string name="theme_delete_title">Delete Theme</string>
	<string name="theme_delete_confirm">Delete \"%s\"?</string>
	<string name="theme_type_builtin">Built-in</string>
	<string name="theme_type_zip">ZIP</string>
	<string name="theme_name">Default Theme</string>
	<string name="theme_description">This is Default UniPad Theme</string>
	<string name="theme_author">UniPad dev.</string>
	<string name="settings_device">Device</string>
	<string name="settings_play">Play</string>
	<string name="trace_log_classic">Show tap order numbers on pads</string>
	<string name="trace_log_classic_desc">While Trace Log is on in play, show the tap order as numbers on each pad instead of lines and dots</string>
	<string name="slide_mode">Slide across pads</string>
	<string name="slide_mode_desc">Dragging a finger onto a pad plays it and stops the pad it left</string>
	<string name="settings_info">Information</string>
	<string name="settings_storage">Storage</string>
	<string name="settings_theme">Theme</string>
	<string name="settings_storage_download">Download Location</string>
	<string name="settings_developer">Developer</string>
	<string name="settings_app">Application</string>
	<string name="settings_user">User</string>
	<string name="date_format">%1$td/%1$tm/%1$tY</string>
	<string name="MTP_count">UniPacks Count</string>
	<string name="MTP_size">UniPacks Size</string>
	<string name="MPT_playCount">Play Count</string>
	<string name="MPT_theme">Theme</string>
	<string name="sort_title">Title</string>
	<string name="sort_producer">Producer</string>
	<string name="sort_play_count">Play Count</string>
	<string name="sort_last_opened_date">Last Opened Date</string>
	<string name="sort_download_date">Download Date</string>
	<string name="MPP_padSize">Pad Size</string>
	<string name="MPP_chain">Chain</string>
	<string name="MPP_soundFiles">Sound files</string>
	<string name="MPP_ledEvents">Led Events</string>
	<string name="MPP_fileSize">File Size</string>
	<string name="MPP_playCount">Play Count</string>
	<string name="MPP_downloadedDate">Downloaded Date</string>
	<string name="MPP_lastPlayed">Last Played</string>
	<string name="MPP_notPlayedYet">-</string>
	<string name="STP_count">Store UniPacks</string>
	<string name="STP_downloadedCount">Downloaded UniPacks</string>
	<string name="SPP_downloadCount">Download count</string>
	<string name="mb">MB</string>
	<string name="cd_youtube">YouTube</string>
	<string name="cd_website">Website</string>
	<string name="cd_bookmark">Bookmark</string>
	<string name="cd_delete">Delete</string>
	<string name="cd_logo">UniPad Logo</string>
	<string name="cd_autoplay_prev">Previous</string>
	<string name="cd_autoplay_play">Play</string>
	<string name="cd_autoplay_pause">Pause</string>
	<string name="cd_autoplay_next">Next</string>
	<string name="workspace_backup_documents">Documents/UniPack (Backup)</string>
	<string name="workspace_documents_android10">Documents/Unipad (Backup)</string>
	<string name="workspace_app_storage">App Storage (Recommended)</string>
	<string name="workspace_internal_storage">Internal Storage</string>
	<string name="workspace_internal_sd_card">Internal SD Card</string>
	<string name="workspace_external_sd_card_format">External SD Card %d</string>
	<string name="workspace_unipack_count">%d UniPacks</string>
	<string name="workspace_desc_app_storage">App-specific storage. No permission needed. Deleted with app uninstall.</string>
</resources>