<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tool="http://schemas.android.com/tools">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/background1"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_centerHorizontal="true"
			android:layout_centerVertical="true"
			android:orientation="vertical">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginBottom="10dp"
				android:gravity="center"
				android:text="@string/launchpadConnecting"
				android:textColor="@color/gray1"
				android:textSize="30dp" />

			<TextView
				android:id="@+id/timer"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginBottom="10dp"
				android:gravity="center"
				android:textColor="@color/gray1"
				android:textSize="30dp"
				tool:text="5" />

			<com.yarolegovich.discretescrollview.DiscreteScrollView
				android:id="@+id/picker"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:dsv_orientation="horizontal" />


		</LinearLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentEnd="true"
			android:layout_alignParentRight="true"
			android:layout_alignParentBottom="true"
			android:layout_margin="10dp"
			android:orientation="vertical">

			<LinearLayout
				android:id="@+id/BTN_speedFirst"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:onClick="selectModeXml"
				android:orientation="vertical"
				android:tag="0">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:padding="10dp"
					android:text="@string/signal_SpeedFirst"
					android:textColor="@color/gray1"
					android:textSize="15dp" />


			</LinearLayout>

			<LinearLayout
				android:id="@+id/BTN_avoidAfterimage"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:onClick="selectModeXml"
				android:orientation="vertical"
				android:tag="1">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:padding="10dp"
					android:text="@string/signal_avoidAfterimage"
					android:textColor="@color/gray1"
					android:textSize="15dp" />


			</LinearLayout>

		</LinearLayout>

		<RelativeLayout
			android:id="@+id/RL_err"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@color/background1"
			android:orientation="vertical"
			android:visibility="gone">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				android:layout_centerVertical="true"
				android:layout_marginBottom="10dp"
				android:gravity="center"
				android:text="@string/midiDevicesNotDetected"
				android:textColor="@color/gray1"
				android:textSize="30dp" />
		</RelativeLayout>


		<TextView
			android:id="@+id/TV_log"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentStart="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentTop="true"
			android:textColor="@color/gray1"
			android:textSize="10dp"
			tool:text="Log\nLog" />

	</RelativeLayout>
</layout>