<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark1">

	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">

		<LinearLayout
		    android:id="@+id/목록"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:paddingBottom="16dp"
		    android:paddingLeft="16dp"
		    android:paddingRight="16dp"
		    android:paddingTop="6dp"/>

	</ScrollView>

	<com.github.clans.fab.FloatingActionMenu
	    android:id="@+id/floatingMenu"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentRight="true"
	    android:layout_margin="10dp"
	    fab:menu_animationDelayPerItem="100"
	    fab:menu_backgroundColor="@android:color/transparent"
	    fab:menu_buttonSpacing="0dp"
	    fab:menu_colorNormal="@color/red"
	    fab:menu_colorPressed="@color/red"
	    fab:menu_icon="@drawable/fab_add"
	    fab:menu_labels_colorNormal="#333"
	    fab:menu_labels_cornerRadius="3dp"
	    fab:menu_labels_ellipsize="none"
	    fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
	    fab:menu_labels_margin="0dp"
	    fab:menu_labels_maxLines="-1"
	    fab:menu_labels_padding="8dp"
	    fab:menu_labels_position="left"
	    fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
	    fab:menu_labels_showShadow="true"
	    fab:menu_labels_singleLine="false"
	    fab:menu_labels_textColor="#f2f1f1"
	    fab:menu_labels_textSize="10dp"
	    fab:menu_openDirection="up">

		<com.github.clans.fab.FloatingActionButton
		    android:id="@+id/uni불러오기"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:src="@drawable/ic_folder"
		    fab:fab_colorNormal="@color/red"
		    fab:fab_colorPressed="@color/red"
		    fab:fab_label="@string/import_unipack"
		    fab:fab_size="mini"/>

		<com.github.clans.fab.FloatingActionButton
		    android:id="@+id/스토어"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:src="@drawable/ic_store"
		    fab:fab_colorNormal="@color/red"
		    fab:fab_colorPressed="@color/red"
		    fab:fab_label="@string/store"
		    fab:fab_size="mini"/>

		<com.github.clans.fab.FloatingActionButton
		    android:id="@+id/설정"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:src="@drawable/ic_settings"
		    fab:fab_colorNormal="@color/red"
		    fab:fab_colorPressed="@color/red"
		    fab:fab_label="@string/setting"
		    fab:fab_size="mini"/>
	</com.github.clans.fab.FloatingActionMenu>
</RelativeLayout>
